--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -7,6 +7,7 @@
   padding: 50px 0;
   color: #222;
   z-index: 9999;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 .logo {
   font-size: 24px;
@@ -16,17 +17,19 @@
 .logo a {
   font-size: 24px;
   color: inherit;
+  &:hover {
+    color: #7fbf36;
+  }
 }
 .gnb {
   display: flex;
   margin-right: 177px;
 }
 
-.gnbBox:hover a {
-  color: #222;
-}
-
 .gnbList {
   margin-left: 136px;
   font-size: 20px;
+  &:hover {
+    color: #7fbf36;
+  }
 }
