--- a/src/styles/subprojectpage.scss
+++ b/src/styles/subprojectpage.scss
@@ -75,11 +75,11 @@ section {
     margin-top: 3vw;
   }
   .title {
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 400;
     line-height: 1.5;
     color: #000;
-    padding-top: 2vw;
+    padding-top: 10px;
   }
   .subtitle {
     // background-color: #f5f5f5;
